# graphene

./: .clang-format  .dir-locals.el  .gitignore  .gitmodules  .pylintrc  .travis.yml  .vimrc  CODESTYLE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  DCO.rst  HACKING.md  Jenkinsfile  Jenkinsfile-GCC  Jenkinsfile-Lighttpd  Jenkinsfile-Python  JenkinsfileSGX-Python  LICENSE.addendum.txt  LICENSE.txt  Makefile  Makefile.Host  Makefile.Test  Makefile.configs  Makefile.manifest  Makefile.rules  Makefile.sanitize  README  README.md  README.rst  asv.conf.json  build-setup  daemon  generate_offsets.cmake  index.md  meson.build  meson_options.txt  pre-req.sh  rules.cmake  testPR.txt  (+3 more)
LibOS/: .gitignore  01-glibc-gettimeofday.patch  02-glibc-sched-getscpu-S.patch  03-glibc-time-c.patch  04-pthread-cond-timedwait-S.patch  Makefile  buildglibc.py  gcc-checksums  glibc-2.17.patch  glibc-2.19.patch  glibc-add-shim-tcb.patch  glibc-arch-fork.patch  glibc-checksums  glibc-liblibos.patch  glibc.mk  meson.build  musl.mk
LibOS/.packed/: glibc.sha384
LibOS/gcc-patches/: libgomp-replace-futex-instruction.patch
LibOS/glibc-2.17/: syscallas.S  syscalldb.h
LibOS/glibc-2.17/elf/: syscallas.S  syscalldb.c
LibOS/glibc-2.17/libos/: Makefile  checkpoint.c  sandbox.c
LibOS/glibc-2.19/: syscallas.S  syscalldb.c  syscalldb.h
LibOS/glibc-2.19/libos/: Makefile  Versions  benchmark.c  msgpersist.c
LibOS/glibc-patches/: cvs-common-symbols.patch  dangling-else.patch  fix-make-warnings.patch  glibc-2.19-remove-vdso.patch  glibc-2.19.patch  glibc-2.23.patch  glibc-2.27.patch  glibc-2.31.patch  glibc-2.33.patch  glibc-2.34.patch  hp-timing-2.19.patch  hp-timing-2.23+.patch  hp-timing-2.23.patch  hp-timing-2.27.patch  hp-timing-2.31.patch  ieee754-boolean-context.patch  ld-gold.patch  liblibos-2.19.patch  liblibos-2.23+.patch  liblibos.patch  malloc-arena-size.patch  nis-bogus-conditional.patch  no-pie.patch  rpc-format-overflow.patch  syscalldb-api.patch
LibOS/libs/: Makefile
LibOS/libs/example/: Makefile  entry.S  main.c
LibOS/libs/include/: includes.h
LibOS/libs/symtab/: Makefile  entry.S  lib.c  main.c
LibOS/musl-patches/: musl.patch
LibOS/shim/: Makefile  meson.build
LibOS/shim/include/: .gitignore  .vimrc  bitop.h  cmpxchg_32.h  cmpxchg_64.h  elf.h  glibc-version.h  meson.build  shim_atomic.h  shim_attestation.h  shim_checkpoint.h  shim_context.h  shim_defs.h  shim_entry.h  shim_entry_offsets.h  shim_flags_conv.h  shim_fork.h  shim_fs.h  shim_fs_lock.h  shim_fs_mem.h  shim_fs_pseudo.h  shim_handle.h  shim_internal.h  shim_ipc.h  shim_ipc_helper.h  shim_ipc_ns.h  shim_ipc_pid.h  shim_ipc_sysv.h  shim_lock.h  shim_process.h  shim_profile.h  shim_signal.h  shim_sync.h  shim_sysv.h  shim_table.h  shim_tcb.h  shim_thread.h  shim_tls.h  shim_types.h  shim_unistd.h  (+4 more)
LibOS/shim/src/: .gitignore  1  Makefile  asm-offsets.c  generated-offsets.c  meson.build  shim-debug.map  shim-x86_64.lds  shim.lds  shim.map  shim_arch_prctl-x86_64.c  shim_async.c  shim_call.c  (+17 more)
Pal/: .gitignore  CMakeLists.txt  Makefile  linux-3.14.patch  linux-3.19.patch  linux-3.5.patch  meson.build
Pal/crt_init/: Makefile
Pal/csu/: Makefile
Pal/gdb_integration/: debug_map_gdb.py  graphene.gdb  language_gdb.py  pagination_gdb.py
Pal/include/: asm-errno.h  atomic.h  bp-asm.h  bpf-helper.h  cmpxchg_32.h  cmpxchg_64.h  do-rel.h  dynamic_link.h  meson.build  pal_defs.h  pal_internal.h  stdarg.h  ucontext.h
Pal/lib/: .gitignore  Makefile  abort.c  api.h  asm-errlist.h  assert.h  atomic.h  avl_tree.c  common.cmake  debug_map.c  hex.h  linux_list.h  list-test.c  list.h  memmgr.h  pal_crypto.h  path.c  slabmgr.h  spinlock.h  stack_protector.c  toml.c  toml.h  toml.patch  ubsan.c  uthash.patch
Pal/regression/: ..Bootstrap.c  .gitignore  00_Atomics.py  00_Attestation.py  00_Bootstrap.py  00_Symbols.py  01_Exception.py  02_Directory.py  02_Event.py  02_File.py  02_Memory.py  02_Misc.py  02_Pipe.py  02_Semaphore.py  02_Socket.py  02_Thread.py  03_Process.py  04_Ipc.py  04_SendHandle.py  05_Process.py  05_Reference_Monitor.py  06_AvxDisable.py  AtomicMath  AtomicMath.c  Attestation.c  Attestation.manifest.template  Attestation1.manifest.template  AttestationReport.c  AvxDisable.c  AvxDisable.manifest.template  Bootstrap.c  Bootstrap2.c  Bootstrap2.manifest.template  Bootstrap3.c  Bootstrap3.manifest  Bootstrap3.manifest.template  Bootstrap4.manifest.template  Bootstrap5.manifest.template  Bootstrap6.manifest  Bootstrap6.manifest.template  (+68 more)
Pal/src/: .db_memory.c.swp-bkp  .gitignore  Makefile  Makefile.Host  Makefile.Test  asm-offsets-build.h  db_events.c  db_exception.c  db_ipc.c  db_main.c  db_memory.c  db_misc.c  db_mutex.c  db_object.c  db_process.c  db_rtld.c  db_semaphore.c  db_streams.c  db_threading.c  dl-machine-x86_64.h  do-rel.h  dynamic_link.h  generated-offsets-build.h  meson.build  pal-gdb.py  pal-symbols  pal.cmake  pal.gdb  pal.h  pal.map  pal_debug.h  pal_defs.h  pal_error.c  pal_error.h  pal_internal.h  pal_rtld.h  printf.c  slab.c  symbols.cmake  user_start.S
Pal/test/: .gitignore  Broadcast.c  Cpuid.c  Event.c  Exception.c  Failure.c  File.c  Fork.c  HandleSend.c  HelloWorld.c  Ipc.c  JailBreak.c  Makefile  Memory.c  Pie.c  Pipe.c  Process.c  Process4.c  Segment.c  Select.c  Server.c  Sleep.c  Tcp.c  Thread.c  Udp.c  Wait.c  Yield.c  manifest.template  test.c  test_pal.py
Runtime/: .gitignore  Makefile  meson.build  pal_loader
benchmarks/: Makefile  manifest.template  meson.build  write_pages.c
common/src/: Makefile  meson.build  path.c  stack_protector.c  toml.patch  ubsan.c  uthash.patch
include/: generated-offsets-build.h  graphene-config.h.in  meson.build
proto/: meson.build
python/graphenelibos/: __init__.py  _sgx_depend.py  _sgx_manifest.py  _sgx_measure.py  _sgx_memory.py  _sgx_sign.py  _sgx_utility.py  aesm.proto  ias.py  manifest.py  meson.build  sgx_finalize_manifest.py  sgx_gen_make_deps.py  sgx_gen_sigstruct.py  sgx_get_enclave_mem_areas.py  sgx_get_token.py  sgx_measure_enclave.py  sgx_sign.py  sgx_utils.py
python/grapheneos/: __init__.py  meson.build  sgx_sign.py
(+1971 files in other folders)
