# TODO: after deprecating 18.04/bionic, change these to type: 'feature'
option('direct', type: 'combo', choices: ['disabled', 'enabled'],
    description: 'Build and install graphene-direct (aka Linux aka nonsgx)')
option('sgx', type: 'combo', choices: ['disabled', 'enabled'],
    description: 'Build and install graphene-sgx (aka Linux-SGX)')
option('skeleton', type: 'combo', choices: ['disabled', 'enabled'],
    description: 'Build skeleton PAL')

option('dcap', type: 'combo', choices: ['disabled', 'enabled'],
    description: 'Build additional utilities linked against DCAP library')
option('tests', type: 'combo', choices: ['disabled', 'enabled'],
    description: 'Build and install tests (not needed unless developing Graphene)')

option('sgx_driver', type: 'combo',
    choices: ['upstream', 'dcap1.6', 'dcap1.10', 'oot'],
    description: 'Flavour of the SGX driver')
option('sgx_driver_include_path', type: 'string',
    description: 'Path to SGX driver headers (default depends on driver)')
option('sgx_driver_device', type: 'string',
    description: 'Path to "enclave" device in /dev (default depends on driver)')
