# TODO: after deprecating 18.04/bionic, change these to type: 'feature'
option('direct', type: 'combo', choices: ['disabled', 'enabled'],
    description: 'Build and install graphene-direct (aka Linux aka nonsgx)')
option('sgx', type: 'combo', choices: ['disabled', 'enabled'],
    description: 'Build and install graphene-sgx (aka Linux-SGX)')
option('skeleton', type: 'combo', choices: ['disabled', 'enabled'],
    description: 'Build skeleton PAL')

option('ubsan', type: 'combo', choices: ['disabled', 'enabled'],
    description: 'Enable undefined behavior sanitizer')
